--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="nav">
             <li><a href="#" class="active"><i class="fa fa-home"></i> Início</a></li>
-            <li><a href="#"><i class="fa fa-user"></i> Sobre</a></li>
+            <li><a href="#"><i class="fa fa-user"></i> Sobre min</a></li>
             <li><a href="#"><i class="fa fa-list"></i> Serviços</a></li>
             <li><a href="#"><i class="fa fa-briefcase"></i> Portfólio</a></li>
             <li><a href="#"><i class="fa fa-comments"></i> Contato</a></li>
@@ -34,7 +34,7 @@
     <!-- Content principal começo  -->
     <div class="main-content">
         <!-- Home Section começo -->
-        <section class="home section">
+        <section class="home section hidden">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -52,6 +52,26 @@
             </div>
         </section>
         <!-- Home Section fim -->
+        <!-- About Section Começo -->
+        <section class="abaout section">
+            <div class="container">
+              <div class="row">
+                  <div class="section-title padd-15">
+                      <h2>Sobre mim</h2>
+                  </div>
+              </div>  
+              <div class="row">
+                  <div class="about-content padd-15">
+                      <div class="row">
+                          <div class="about-text">
+                              <h3>I'm Vitor Magalhães and <span>Web Developer</span></h3>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident illo eaque animi cum quisquam fugiat perspiciatis consectetur harum ullam, enim nobis laudantium, tempora amet exercitationem obcaecati quasi. Voluptatum, nisi esse?</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+        </section>
     </div>
     <!-- Content principal fim  -->
     </div>
