--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
               <div class="row">
                   <div class="about-content padd-15">
                       <div class="row">
-                          <div class="about-text">
+                          <div class="about-text padd-15">
                               <h3>I'm Vitor Magalhães and <span>Web Developer</span></h3>
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident illo eaque animi cum quisquam fugiat perspiciatis consectetur harum ullam, enim nobis laudantium, tempora amet exercitationem obcaecati quasi. Voluptatum, nisi esse?</p>
                           </div>
+                      </div>
+                      <div class="row">
+                          <div class="personal-info padd-15">Info</div>
+                          <div class="skills padd-15">Skills</div>
                       </div>
                   </div>
               </div>
