--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         <h3 class="hello">Hello, my name is <span class="name">Vitor Magalhães</span></h3>
                         <h3 class="my-profession">I'm a <span class="typing">Front End Developer </span></h3>
                         <p>I'm a Front End Developer with extensive experience for over 3 years.My expertise is to
-                            create and website desingn... 
-                        </p>
+                            create and website desingn...</p>
                         <a href="#contact" class="btn hire-me">Hire me</a>
                     </div>
                     <div class="home-img padd-15">
@@ -53,7 +52,7 @@
         </section>
         <!-- Home Section fim -->
         <!-- About Section Começo -->
-        <section class="abaout section">
+        <section class="about section">
             <div class="container">
               <div class="row">
                   <div class="section-title padd-15">
@@ -69,8 +68,87 @@
                           </div>
                       </div>
                       <div class="row">
-                          <div class="personal-info padd-15">Info</div>
-                          <div class="skills padd-15">Skills</div>
+                          <div class="personal-info padd-15">
+                              <div class="row">
+                                  <div class="info-item padd-15">
+                                      <p>Birthday : <span>10 maio 2000</span></p>
+                                  </div>
+                                  <div class="info-item padd-15">
+                                    <p>Age : <span>22</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>Website : <span>www.domain.com</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>Email : <span>vitorantonio30000@gmail.com</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>Grau : <span>Bacharelado</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>Phone : <span>+55 (11) 991XX-X07X</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>City : <span>São Paulo - SP</span></p>
+                                </div>
+                                <div class="info-item padd-15">
+                                    <p>Freelance : <span>Available</span></p>
+                                </div>
+                              </div>
+                              <div class="row">
+                                  <div class="buttons">
+                                      <a href="#" class="btn padd-15">Download CV</a>
+                                      <a href="#contact" class="btn hire-me">Hire Me</a>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="skills padd-15">
+                              <div class="row">
+                                  <div class="skill-item padd-15">
+                                      <h5>JS</h5>
+                                      <div class="progress">
+                                          <div class="progress-in" style="width: 86%;"></div>
+                                          <div class="skill-percent">86%</div>
+                                      </div>
+                                  </div>
+                                  <div class="skill-item padd-15">
+                                    <h5>PHP</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 66%;"></div>
+                                        <div class="skill-percent">66%</div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>HTML</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 96%;"></div>
+                                        <div class="skill-percent">96%</div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>Docker</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 76%;"></div>
+                                        <div class="skill-percent">76%</div>
+                                    </div>
+                                </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="education padd-15">
+                              <h3 class="title">Education</h3>
+                              <div class="row">
+                                  <div class="timeline-box padd-15">
+                                      <div class="timeline">
+                                          timeline
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="experience padd-15">
+                            <h3 class="title">Experience</h3>
+                        </div>
                       </div>
                   </div>
               </div>
