--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <!-- Home Section fim -->
         <!-- About Section Começo -->
-        <section class="about section">
+        <section class="about section hidden">
             <div class="container">
               <div class="row">
                   <div class="section-title padd-15">
@@ -140,14 +140,55 @@
                               <h3 class="title">Education</h3>
                               <div class="row">
                                   <div class="timeline-box padd-15">
-                                      <div class="timeline">
-                                          timeline
+                                      <div class="timeline shadow-dark">
+                                          <!-- timeline item -->
+                                          <div class="timeline-item">
+                                              <div class="circle-dot"></div>
+                                              <h3 class="timeline-date">
+                                                  <i class="fa fa-calendar"></i> 2020 - 2023
+                                              </h3>
+                                              <h4 class="timeline-title">Master in System Information</h4>
+                                              <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque veritatis sapiente in a similique quos quaerat optio delectus atque, porro quisquam aliquam rerum eius maxime.</p>
+                                          </div>
+                                           <!-- timeline item -->
+                                           <div class="timeline-item">
+                                            <div class="circle-dot"></div>
+                                            <h3 class="timeline-date">
+                                                <i class="fa fa-calendar"></i> 2020 - 2023
+                                            </h3>
+                                            <h4 class="timeline-title">Master in System Information</h4>
+                                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque veritatis sapiente in a similique quos quaerat optio delectus atque, porro quisquam aliquam rerum eius maxime.</p>
+                                        </div>
                                       </div>
                                   </div>
                               </div>
                           </div>
                           <div class="experience padd-15">
                             <h3 class="title">Experience</h3>
+                            <div class="row">
+                                <div class="timeline-box padd-15">
+                                    <div class="timeline shadow-dark">
+                                        <!-- timeline item -->
+                                        <div class="timeline-item">
+                                            <div class="circle-dot"></div>
+                                            <h3 class="timeline-date">
+                                                <i class="fa fa-calendar"></i> 2020 - 2023
+                                            </h3>
+                                            <h4 class="timeline-title">Master in System Information</h4>
+                                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque veritatis sapiente in a similique quos quaerat optio delectus atque, porro quisquam aliquam rerum eius maxime.</p>
+                                        </div>
+                                         <!-- timeline item -->
+                                         <div class="timeline-item">
+                                          <div class="circle-dot"></div>
+                                          <h3 class="timeline-date">
+                                              <i class="fa fa-calendar"></i> 2020 - 2023
+                                          </h3>
+                                          <h4 class="timeline-title">Master in System Information</h4>
+                                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque veritatis sapiente in a similique quos quaerat optio delectus atque, porro quisquam aliquam rerum eius maxime.</p>
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                       </div>
                   </div>
@@ -155,9 +196,102 @@
             </div>
         </section>
     </div>
-    <!-- Content principal fim  -->
+    <!-- About Sectiom fim  -->
+    <!-- Services Section Fim -->
+    <section class="service section hidden">
+        <div class="container">
+            <div class="row">
+                <div class="section-title padd-15">
+                    <h2>Services</h2>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-mobile-alt"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?</p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-laptop-code"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?</p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-palette"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?</p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-code"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?</p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?</p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+                <!-- Service item começo -->
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-bullhorn"></i>
+                        </div>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam harum pariatur quis?
+                        </p>
+                    </div>
+                </div>
+                <!-- Service item Fim -->
+            </div>
+        </div>
+    </section>
+                <!-- Service Section Fim -->
+                <!-- Portifolio Sectio Começo -->
+    <section class="portfolio section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title padd-15">
+                    <h2>Portifólio</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+                <!-- Portifolio Sectio Fim -->
     </div>
     <!-- Container Principal Fim -->
+</div>
+    <!-- JS files -->
     <script src="js/script.js"></script>
 </body>
 </html>
