--- a/index.html
+++ b/index.html
@@ -285,6 +285,31 @@
                     <h2>Portifólio</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="portfolio-heading padd-15">
+                    <h2>My Last Projects :</h2>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Portifolio item 1 começo -->
+                <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="./img/portifolio/portifolio_1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- Portifolio item 1 fim -->
+                <!-- Portifolio item 2 começo -->
+                <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="./img/portifolio/portifolio_2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- Portifolio item 2 fim -->
+            </div>
         </div>
     </section>
                 <!-- Portifolio Sectio Fim -->
